# brass

./: Cargo.toml  flake.nix
.cargo/: config.toml
bench/: Cargo.toml  index.html
bench/src/: lib.rs
brass/: Cargo.toml  flake.nix
brass/src/: context.rs  effect.rs  lib.rs  strings.rs  web.rs
brass/src/component/: mod.rs  msg.rs
brass/src/dom/: attribute.rs  event.rs  mod.rs  node.rs  signal_vec_view.rs  signal_view.rs  style.rs  tag.rs  view.rs
brass/src/signal/: mod.rs
brass/tests/: web.rs
brass_bulma/: Cargo.toml
brass_bulma/src/: dropdown.rs  lib.rs  modal.rs
brass_macros/: Cargo.toml
brass_macros/src/: lib.rs  view.rs
brass_macros/tests/: macro_tests.rs
copper_bulma/: Cargo.toml
copper_bulma/src/: lib.rs
examples/todo/: Cargo.toml  index.html
examples/todo/pkg/: copper_todo.js  copper_todo_bg.wasm
examples/todo/src/: lib.rs
old/: any.rs  lib.rs  util.rs
old/app/: handle.rs  mod.rs  state.rs
old/dom/: attribute.rs  event.rs  tag.rs
old/strings/: mod.rs
old/vdom/: mod.rs  node.rs
old/vdom/render/: mod.rs  string_tables.rs
src/: bump.rs  lib.rs  strings.rs  util.rs
src/app/: component.rs  component_manager.rs  context.rs  effect.rs  event_manager.rs  handle.rs  mod.rs  state.rs
src/dom/: attribute.rs  event.rs  mod.rs  tag.rs
src/strings/: interner.rs  mod.rs
src/vdom/: component.rs  event.rs  event_manager.rs  mod.rs  node.rs  patch.rs  render.rs
src/vdom/builder/: mod.rs
src/vdom/render/: mod.rs  string_tables.rs
tests/: web.rs
xtask/src/: main.rs
