[package]
name = "brass"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.9"
futures-core = "0.3.9"
js-sys = "0.3.46"
once_cell = "1.5.2"
tracing = "0.1.22"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "Text",
    "Element",
    "Node",
    "Window",
    "History",
    "Location",
    "Document",
    "Event",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
]

[workspace]
members = [
    "brass_bulma",

    "xtask",
    "examples/todo"
]
