[package]
name = "brass"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
timings = []

[dependencies]
fnv = "1.0.7"
futures = "0.3.9"
futures-core = "0.3.9"
js-sys = "0.3.46"
once_cell = "1.8.0"
tracing = "0.1.22"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "Text",
    "Element",
    "Node",
    "Window",
    "History",
    "Location",
    "Document",
    "Event",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Performance",
]

[workspace]
members = [
    "brass_bulma",

    "xtask",
    "examples/todo",
    "bench",
]

[dev-dependencies]
tracing-wasm = "0.2.0"
wasm-bindgen-test = "0.3.25"
