[package]
name = "brass_bulma"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brass = { path = "../" }
wasm-bindgen = "0.2.75"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "Event",
    "EventTarget",
    "HtmlSelectElement",
]
