[package]
name = "brass_todo"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
brass = { path = "../../brass" }
tracing = "0.1.22"
wasm-bindgen = "0.2.69"
web-sys = "0.3.46"
tracing-wasm = "0.2.1"
